Resolves: tdf#125387 gtk3 fit-to-text stuck as disabled

should only disable/enable its parent container

Change-Id: I002a525b7ac4c178c3db7efc06848315afb785e0
Reviewed-on: https://gerrit.libreoffice.org/72624
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit c278c1cf3e9ad4c810534558b7f9ea1a41c5e1cc)
Reviewed-on: https://gerrit.libreoffice.org/72664
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>